Adjust jwt, nilai API and swagger
